<resources>
    <string name="app_name">Sport Reservation</string>
    <string name="title_activity_detail_user">DetailUserActivity</string>

    <!-- Botton Navigation -->
    <string name="title_home">Home</string>
    <string name="title_article">Article</string>
    <string name="title_rent">Rent</string>
    <string name="title_history">History</string>
    <string name="title_Profile">Profile</string>

    <!-- Sport -->
    <string name="futsal">Futsal</string>
    <string name="basket">Basket</string>
    <string name="badminton">Badminton</string>
    <string name="golf">Golf</string>
    <string name="football">Football</string>
    <string name="image_sport_place">Image Sport Place</string>
    <string name="image_article">Image Article</string>

    <!-- Detail Place -->
    <string name="title_open">Open</string>
    <string name="title_price">Harga</string>
    <string name="title_phone">No Telephone</string>
    <string name="title_facility">Fasilitas</string>
    <string name="title_address">Alamat</string>

    <string name="open">%1s - %2s</string>
    <string name="price">Rp %1s</string>
    <string name="phone">%1s</string>
    <string name="facility">%1s</string>
    <string name="address">%1s</string>

    <!-- Rent -->
    <string name="title_referee">Referee</string>
    <string name="title_equipment">Equipment</string>

    <!-- History -->
    <string name="dibatalkan">DIBATALKAN</string>
    <string name="selesai">SELESAI</string>

    <!-- Profile -->
    <string name="title_name">Nama</string>
    <string name="title_email">Email</string>
    <string name="img_profile">Image Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_input_your_name">Nama</string>
    <string name="txt_input_email">Email</string>
    <string name="txt_input_address">Alamat</string>
    <string name="txt_input_phone_number">No. tlp</string>
    <string name="txt_regis">Daftar</string>
    <string name="txt_setting">Setting</string>

    <string name="notification_key">notification_key</string>
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Notifikasi akan aktif setiap jam 5.30</string>
    <string name="notification_message_format">(%1$s - %2$s) %3$s</string>
    <string name="notification_content_title">Sport Reservation</string>
    <string name="notification_enable">Notifikasi diaktifkan</string>
    <string name="notification_disable">Notifikasi dimatikan</string>

    <string name="txt_dummy_place_name">Dummy Place Name</string>
    <string name="txt_dummy_sport_location">Jl. Warung Jati Barat No.61, RW.5, Jati Padang, Kec. Ps. Minggu, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12540</string>
    <string name="txt_title_place">Nama Tempat</string>
    <string name="txt_title_location">Lokasi</string>
    <string name="txt_title_sport_name">Nama olahraga</string>
    <string name="txt_dummy_sport_name">Badminton</string>
    <string name="txt_title_date">Tanggal</string>
    <string name="txt_dummy_date">01/12/2021</string>
    <string name="txt_title_time">Waktu</string>
    <string name="txt_dummy_time">09:00 – 10:00</string>
    <string name="txt_done">selesai</string>
    <string name="txt_reservasi">Reservasi</string>
    <string name="txt_booking">Pesan Sekarang</string>
    <string name="txt_sudah_pesan">Sudah dipesan</string>
    <string name="txt_min_booking">"Maaf, pesan tempat hanya bisa 1–4 jam."</string>
    <string name="txt_min_date_booking">Tanggal atau bulan yang kamu masukan sudah terlewat.</string>
    <string name="txt_lengkapi_profile">Lengkapi data profile anda</string>
    <string name="order_time">%1$s - %2$s</string>
    <string name="txt_input_start_time">%02d:%02d</string>
    <string name="txt_dummy_start_time">14:20</string>
    <string name="txt_duration">Durasi</string>
    <string name="txt_hours">Jam</string>
    <string name="txt_pesan">Pesan</string>
    <string name="txt_status">Status</string>
    <string name="txt_dibatalkan">Dibatalkan</string>
    <string name="txt_empty_list">Tidak ada Data</string>
    <string name="txt_ubah">Ubah data</string>
    <string name="rent_refereee">Sewa Wasit</string>
    <string name="rent_equipment">SEWA ALAT</string>
    <string name="txt_login">Masuk</string>
    <string name="txt_password">Password</string>
    <string name="txt_rental">Rental</string>
    <string name="txt_penyewaan_pada_tanggal">Penyewaan pada tanggal: </string>
    <string name="txt_sign_out">Sign out</string>

</resources>