<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sportreservation.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.sportreservation.ui.main.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_rent"
        android:name="com.example.sportreservation.ui.main.rent.RentFragment"
        android:label="@string/title_rent"
        tools:layout="@layout/fragment_rent" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.sportreservation.ui.main.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sportreservation.ui.main.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>